[metadata]
name = portpicker
version = 1.4.0
maintainer = Google LLC
maintainer_email = greg@krypto.org
license = Apache 2.0
description = A library to choose unique available network ports.
url = https://github.com/google/python_portpicker
long_description = Portpicker provides an API to find and return an available network
    port for an application to bind to.  Ideally suited for use from
    unittests or for test harnesses that launch local servers.
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
platforms = POSIX
requires =

[options]
py_modules = portpicker
scripts = src/portserver.py
